--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,7 +17,7 @@
           class="flex-1 flex flex-row items-center justify-between max-w-full gap-[20px] mq800:flex-wrap"
         >
           <div class="relative">Need help? Call us: (+98) 0234 456 789</div>
-          <a href="admin">Admin</a>
+
           <div
             class="flex flex-row items-center justify-center gap-[36px] mq450:gap-[18px]"
           >
@@ -61,16 +61,18 @@
             class="self-stretch bg-white flex-1 rounded-xl flex flex-row items-center justify-start py-0 pr-0 pl-[25px] box-border relative gap-[10px] max-w-full"
           >
             <form [formGroup]="searchForm" (ngSubmit)="onSearch()">
-              <input
-                class="h-[90%] w-[270px] rounded-md focus:outline-none"
-                type="text"
-                placeholder="Search any things"
-                formControlName="keywords"
-              />
-
+              <div
+                class="relative inline-block min-w-[127px] whitespace-nowrap"
+              >
+                <input
+                  type="text"
+                  placeholder="Serach any things"
+                  formControlName="keywords"
+                />
+              </div>
               <button
-                class="cursor-pointer [border:none] py-[17.5px] px-[41px] bg-b !m-[0] absolute top-[0px] left-[306px] rounded-xl flex flex-row items-center justify-center hover:bg-darkgoldenrod"
                 type="submit"
+                class="bg-[#EDA415] cursor-pointer [border:none] py-[17.5px] px-[41px] !m-[0] absolute top-[0px] left-[306px] rounded-xl flex flex-row items-center justify-center hover:bg-darkgoldenrod"
               >
                 <div
                   class="relative text-sm font-semibold font-poppins text-white text-left inline-block min-w-[50px]"
@@ -104,17 +106,11 @@
                 alt=""
                 src="../../../assets/vuesaxlinearheart.svg"
               />
-
-              <div
-                class="rounded-[394.74px] bg-b flex flex-col items-center justify-center py-[0.5px] px-[4.1px]"
-              >
-                <div class="relative inline-block min-w-[6px]">0</div>
-              </div>
             </div>
             <div
               class="relative text-sm inline-block min-w-[47px] whitespace-nowrap"
             >
-              Wishlist
+              <a class="no-underline text-white" href="admin">Admin</a>
             </div>
           </div>
           <div class="flex flex-row items-center justify-center gap-[12px]">
